--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "framer-motion": "^12.23.6",
     "github-calendar": "^2.3.4",
+    "gsap": "^3.13.0",
+    "locomotive-scroll": "^4.1.4",
     "ogl": "^1.0.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
